--- a/public_html/style.css
+++ b/public_html/style.css
@@ -519,6 +519,27 @@ nav.sticky{
     .row{
         flex-direction: column;
     }
-    
+
+
+    #back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    width: 40px;
+    height: 40px;
+    background-color: #6a922a;
+    color:black#fff;
+    text-align: center;
+    line-height: 40px;
+    font-size: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+#back-to-top:hover {
+    background-color: #555;
+}
 }
 
